Fixed scaling issue on smaller screens

--- a/react/src/ChatPage.css
+++ b/react/src/ChatPage.css
@@ -119,7 +119,7 @@
     }
 }
 
-@media screen and (max-height: 800px) {
+@media screen and (max-width: 600px) and (max-height: 800px) {
     .frame {
         margin-bottom: 85px;
     }
